--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -4,6 +4,7 @@
 \usepackage[french]{babel}
 \usepackage[titlepage,fancysections,pagenumber]{polytechnique}
 \usepackage{amsfonts}
+\usepackage{amsmath}
 \usepackage{graphicx}
 
 
@@ -16,7 +17,7 @@
 
 \maketitle
 
-\section*{Réponses}
+\section*{Partie théorique}
 	\begin{enumerate}
 		\item Je sais pas trop si la réponse attendue est une réponse intuitive ou une vraie démonstration de probas
 		\item Idem, je sais pas si simplement dire "P extremal" implique "P est l'un des sommets du polygone" suffit pour conclure ou si il faut pas prouver d'une manière ou d'une autre rigoureusement cette implication
@@ -26,11 +27,48 @@
 				&=& \int_0^1{\p(P_1 \not\subset S_p) \ldots \p(P_{n-1} \not\subset S_p)\p(r\leq R \leq r + dr)} \\
 				&=& \int_0^1{\p(P_1 \not\subset S_p)^{n-1}\p(r\leq R \leq r + dr)} \\
 				&=& \int_0^1{(1 - \p(P_1 \subset S_p))^{n-1}\p(r\leq R \leq r + dr)} \\
-				&=& \int_0^1{\left( 1 - \frac{g(r)}{\pi}\right) ^{n-1}\p(r\leq R \leq r + dr)} \\
+				&=& \int_0^1{\left( 1 - \frac{g(r)}{\pi}\right) ^{n-1}\p(r\leq R \leq r + dr)}
 		\end{eqnarray}
 		à mon sens la probabilité que $R$ soit entre $r$ et $r + dr$ est de $2\pi r$ du coup je comprend pas trop la deuxieme partie du résultat...
-		\item \includegraphics[width=0.5\textwidth]{Q4_schema.png}
+		\item %\includegraphics[width=0.5\textwidth]{Q4_schema.png}
+			On cherche tout d'abord les bornes de l'intervalle d'integration.
+
+			Pour trouver l'aire voulue, on doit integrer entre $x_c$ et $x_d$, ces points sont les points d'intersection entre la droite d'équation $y = r = 1 - s$ et le cercle d'équation $x^2 + y^2 = 1$
+			$$ \sqrt{1 - x^2} = y = 1 - s $$ donc 
+			\begin{eqnarray}
+				x^2	&=& (1 - s)^2 + 1\\
+					&=& 1 + 2s - s^2 + 1\\
+					&=& 2s - s^2
+			\end{eqnarray} 
+			donc $x = \pm \sqrt{2s - s^2}$
+
+			On cherche ensuite à déterminer $S_p$, on calcule donc $S_p + S_b - S_b$
+			Ainsi, \begin{eqnarray}
+				h(s)	&=& S_p \\
+					&=& S_p + S_b - S_b \\
+					&=& \int^{\sqrt{2s - s^2}}_{-\sqrt{2s - s^2}}{\sqrt{1-x^2}dx} - \int^{\sqrt{2s - s^2}}_{-\sqrt{2s - s^2}}{(1 - s) dx} \\
+					&=& \int^{\sqrt{2s - s^2}}_{-\sqrt{2s - s^2}}{(s + \sqrt{1-x^2} - 1) dx}
+			\end{eqnarray}
+
+		\item on a $$\sqrt{1 - x^2} = 1 - \frac{x^2/2} + o(x^2)$$
+		donc
+		\begin{eqnarray}
+			h(s)	&=& \int^{\sqrt{2s - s^2}}_{-\sqrt{2s - s^2}}{(s - \frac{x^2}{2} + o(x^2)) dx} \\
+				&=& 2s^{3/2}\sqrt{2-s} - \frac{1}{3}(2s - s^2)^{3/2} + o(2s-s^2)^3/2 \\\text{Vrai car $ \lim_{x \to 0} 2s - s^2 = 0$}\\ % TODO : Rajouter que c'est vrai car x tend vers 0 quand 2s^2 - s^2 tend vers 0
+				&\sim& s^{3/2} (2\sqrt{2-s} - \frac{1}{3}(2 - s)^{3/2}) \\
+				&\sim& s^{3/2} (2\sqrt{2} - \frac{1}{3}\sqrt{8}) \\
+				&\sim& s^{3/2} \sqrt{2}(2 - \frac{1}{3}\sqrt{4}) \\
+				&\sim& s^{3/2} 2\sqrt{2}(1 - \frac{1}{3}) \\
+				&\sim& s^{3/2} \frac{4\sqrt{2}}{3} \\
+		\end{eqnarray}
+		\item	Si $h(s) << \frac{1}{n}$, $\left(1 - \frac{h(s)}{\pi}\right)^{n-1}$ tend vers $0$, et si $h(s) >> \frac{1}{n}$, cette quantité diverge, il faut donc avoir $h(s) \sim \frac{1}{n}$ ce qui implique que $s \sim un^{-2/3}$% TODO ; Mieux démontrer ça
+
+		\item Dans ce cas, on a bien $\left(1 - \frac{h(s)}{\pi}\right)^{n-1}$ qui tend vers $e^{-\frac{K}{\pi}u^{3/2}}$
+
+		De plus, on a bient $2(1-s) \sim 2n^{-2/3}$
+
 		\end{enumerate}
 
+\section*{Simulations}
 \end{document}
 
