--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -19,16 +19,20 @@
 \section{Une borne théorique inférieure}
 	\begin{enumerate}
 		\item Je sais pas trop si la réponse attendue est une réponse intuitive ou une vraie démonstration de probas
-		\item \label{extr} Idem, je sais pas si simplement dire "P extremal" implique "P est l'un des sommets du polygone" suffit pour conclure ou si il faut pas prouver d'une manière ou d'une autre rigoureusement cette implication
-		\item \begin{eqnarray}
+		\item \label{extr} Si P est extrémal, alors P est nécessairement un des sommets du polygone, on a donc $C_n \subset B_n$ ce qui implique que $\p(B_n) \geq \p(C_n)$
+		\item En introduisant $S(r)$ l'aire du cercle de rayon $r$, on à
+		\begin{eqnarray}
 			\p(C_n) &=& \int_0^1{\p(C_n | R = r) \p(r\leq R \leq r + dr)} \\
 				&=& \int_0^1{\p(P_1 \not\subset S_p \cap \ldots \cap P_{n-1} \not\subset S_p)\p(r\leq R \leq r + dr)} \\
 				&=& \int_0^1{\p(P_1 \not\subset S_p) \ldots \p(P_{n-1} \not\subset S_p)\p(r\leq R \leq r + dr)} \\
 				&=& \int_0^1{\p(P_1 \not\subset S_p)^{n-1}\p(r\leq R \leq r + dr)} \\
 				&=& \int_0^1{(1 - \p(P_1 \subset S_p))^{n-1}\p(r\leq R \leq r + dr)} \\
-				&=& \int_0^1{\left( 1 - \frac{g(r)}{\pi}\right) ^{n-1}\p(r\leq R \leq r + dr)}
+				&=& \int_0^1{\left( 1 - \frac{g(r)}{\pi}\right) ^{n-1}\p(r\leq R \leq r + dr)} \\
+				&=& \int_0^1{\left( 1 - \frac{g(r)}{\pi}\right) ^{n-1}\frac{S(r + dr) - S(r)}{S(1)}} \\
+				&=& \int_0^1{\left( 1 - \frac{g(r)}{\pi}\right) ^{n-1}\frac{\frac{dS}{dr}dr}{\pi}} \\
+				&=& \int_0^1{\left( 1 - \frac{g(r)}{\pi}\right) ^{n-1}\frac{2\pi r dr}{\pi}} \\
+				&=& \int_0^1{\left( 1 - \frac{g(r)}{\pi}\right) ^{n-1}2 r dr} \\
 		\end{eqnarray}
-		à mon sens la probabilité que $R$ soit entre $r$ et $r + dr$ est de $2\pi r$ du coup je comprend pas trop la deuxieme partie du résultat...
 		\item %\includegraphics[width=0.5\textwidth]{Q4_schema.png}
 			On cherche tout d'abord les bornes de l'intervalle d'integration.
 
